@@ -169,6 +169,7 @@ private:
 	QAction* action_divide_value;
 	QAction* action_drop_values;
 	QAction* action_mask_values;
+	QAction* action_sample_values;
 	QAction* action_join_columns;
 	QActionGroup* normalizeColumnActionGroup;
 	QActionGroup* ladderOfPowersActionGroup;
@@ -278,6 +279,7 @@ private Q_SLOTS:
 	void reverseColumns();
 	void dropColumnValues();
 	void maskColumnValues();
+	void sampleColumnValues();
 	// 	void joinColumns();
 	void normalizeSelectedColumns(QAction*);
 	void powerTransformSelectedColumns(QAction*);
