@@ -17,6 +17,7 @@ New features:
 		* when generating random numbers, allow to specify the seed number
 		* show column statistics also for text columns
 		* Dropping and masking of values also for text columns
+		* Data sampling (random and periodic methods)
 	* [import]
 		* Import data from Excel .xlsx files using QXlsx library
 		* HDF5: support VLEN data import
